<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/module_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generate_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate_companion"
                android:textAlignment="center"
                android:textSize="10pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/priorities_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintTop_toBottomOf="@id/module_card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_priorities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_priorities"
                android:textAlignment="center"
                android:textSize="10pt"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/default_ldac_params_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintTop_toBottomOf="@id/priorities_card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/default_params_ldac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ldac_params"
                android:textAlignment="center"
                android:textSize="10pt"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/default_lhdc_params_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintTop_toBottomOf="@id/default_ldac_params_card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/default_params_lhdc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lhdc_params"
                android:textAlignment="center"
                android:textSize="10pt"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/default_lc3plus_params_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintTop_toBottomOf="@id/default_lhdc_params_card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="64dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/default_params_lc3plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lc3plus_params"
                android:textAlignment="center"
                android:textSize="10pt"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>